[wip] so many things I don't even

--- a/src/DesignTimeStyleHelper/DesignTimeStyleHelper.csproj
+++ b/src/DesignTimeStyleHelper/DesignTimeStyleHelper.csproj
@@ -90,6 +90,10 @@
     <Compile Include="WindowController.xaml.cs">
       <DependentUpon>WindowController.xaml</DependentUpon>
     </Compile>
+    <Page Include="git_pull_request.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
